# my_first_ai_projects

./: README.md
01-AI-Engineer-Course-2025/01-Intro/: python-intro.ipynb
01-AI-Engineer-Course-2025/01-Intro/.ipynb_checkpoints/: cell-intro-checkpoint.ipynb
01-AI-Engineer-Course-2025/02-NLP_module_intro/: 03-RegEx.ipynb  04-Tokenization.ipynb  07-N-grams.ipynb
01-AI-Engineer-Course-2025/02-NLP_module_intro/.ipynb_checkpoints/: 05-Stemming-checkpoint.ipynb
01-Intro/.ipynb_checkpoints/: list_comprehension-checkpoint.ipynb
02-MCP-Crash-course-for-Python/mcp-crash-course/: pyproject.toml
02-MCP-Crash-course-for-Python/mcp-crash-course/src/mcp_crash_course/: server.py
02-NLP_module_intro/.ipynb_checkpoints/: 01-lowercasing-checkpoint.ipynb  02-remove_stop_words-checkpoint.ipynb  06-Lemmatization-checkpoint.ipynb  08-hotel_reviews-checkpoint.ipynb
