[project]
name = "mcp-crash-course"
version = "0.1.0"
description = ""
license = "MIT"
authors = [
    {name = "daveswork",email = "daveswork@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli] (==1.17.0)",
    "openai (==1.75.0)",
    "python-dotenv",
    "ipykernel",
    "httpx"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
